--- a/style.css
+++ b/style.css
@@ -4,30 +4,34 @@
 body {
   background-image: url(gambar/bg.jpg);
 }
-marquee{
+marquee {
   color: #fff;
   background-color: #650502;
+  pointer-events: none;
 }
-h1{
+h1 {
   padding: 2%;
   color: #ffaf01;
   text-shadow: #6d520b;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   text-decoration: line-through #121212;
+  pointer-events: none;
 }
-.icon{
+.icon {
   height: 200px;
   width: 200px;
 }
-.suhu{
+.suhu {
   top: 40%;
   text-decoration: none;
-
+  pointer-events: none;
 }
-h2{
+h2 {
+  pointer-events: none;
   color: #ffffff;
 }
-.text-input{
+.text-input {
   background: #fffffff5;
   height: 50px;
   width: 50%;
@@ -36,26 +40,25 @@ h2{
   border-radius: 25px 0 0 25px;
 }
 
-input{
+input {
   position: relative;
   display: inline-block;
   box-sizing: border-box;
   border: none;
-  transition: .5s;
+  transition: 0.5s;
 }
-input[type="submit"]{
+input[type="submit"] {
   left: -8px;
-  border-radius:  0 25px 25px 0;
+  border-radius: 0 25px 25px 0;
   width: 100px;
   height: 50px;
   cursor: pointer;
   color: #fff;
   background: #d73600;
 }
-input[type="submit"]:hover{
+input[type="submit"]:hover {
   background-color: #650502;
 }
-
 
 .container.center {
   margin-top: 10px;
@@ -93,39 +96,161 @@ input[type="submit"]:hover{
   transform: scale(1.2);
   filter: blur(3px);
 }
-
-
-
-img {
-  height: 50px;
+.kota{
+animation: fadee 1s linear infinite ;
 }
 
-.detail{
+@-webkit-keyframes fadee {
+}
+from {
+  opacity: 0.4;
+
+}
+
+to {
+  opacity: 1;
+}
+
+@keyframes fadee {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 4;
+  }
+}
+.country {
+  color: #a03535;
+  pointer-events: none;
+}
+
+.animasi {
+  position: absolute;
+  margin-left: 20%;
+  width: 70%;
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none;
+  z-index: 1;
+}
+.animasi-room {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+}
+.animasi-room img {
+  width: 3rem;
+}
+.animasi-room div {
+  position: absolute;
+  display: block;
+}
+.animasi-room div:nth-child(1) {
+  left: 20%;
+  animation: fall 20s linear infinite;
+}
+.animasi-room div:nth-child(2) {
+  left: 50%;
+  animation: fall 14s linear infinite;
+}
+.animasi-room div:nth-child(3) {
+  left: 70%;
+  animation: fall 14s linear infinite;
+}
+.animasi-room div:nth-child(4) {
+  left: 5%;
+  animation: fall 15s linear infinite;
+}
+.animasi-room div:nth-child(5) {
+  left: 85%;
+  animation: fall 18s linear infinite;
+}
+.animasi-room div:nth-child(6) {
+  left: 90%;
+  animation: fall 12s linear infinite;
+}
+.animasi-room div:nth-child(7) {
+  left: 15%;
+  animation: fall 12s linear infinite;
+}
+.animasi-room div:nth-child(8) {
+  left: 60%;
+  animation: fall 15s linear infinite;
+}
+@keyframes fall {
+  0%{
+    opacity: 0;
+    top: -10%;
+    transform: translateX(-20px);
+
+  }
+  10%{
+    opacity: 1;
+  }
+  20%{
+    transform: translateX(-10px);
+  }
+  40%{
+    transform: translateX(-20PX);
+  }
+  60%{
+    transform: translateX(-20px);
+  }
+  80%{
+    transform: translateX(-10px);
+  }
+  100%{
+    top: 110%;
+    transform: translateX(-20px);
+  }
+}
+.icon {
+  height: 150px;
+  width: 150px;
+  animation: title 2s linear infinite;
+}
+@keyframes title {
+  from {
+    transform: rotateX(2);
+  }
+  to {
+    transition: 0.2s;
+    transform: scale(1.2);
+  }
+}
+
+.detail {
   margin-top: 10%;
   display: flex;
   justify-content: space-between;
 }
-.text-detail{
+.text-detail {
   margin-top: 2%;
-
+  pointer-events: none;
 }
-.country{
-  color: #a03535;
-}
-.error{
+.error {
   color: red;
   display: none;
 }
 @media screen and (max-width: 800px) {
-  .text-input{
+  .text-input {
     height: 40px;
     width: 60%;
   }
-  input[type="submit"]{
+  input[type="submit"] {
     width: 100px;
     height: 40px;
   }
-  .text-detail{
+  .text-detail {
     font-size: 12px;
+  }
+  .center{
+    height: 100%;
   }
 }
